--- a/views/admin_chat.hbs
+++ b/views/admin_chat.hbs
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Shopping Arena</title>
-      <script src="https://code.jquery.com/jquery-3.3.1.min.js"  crossorigin="anonymous"></script>
+    <title>Admin Chat</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"  crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="/mofo/sample.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/mofo/chat.js"></script>
 </head>
 <body>
-    <h1>Welcome! U have been succesfully logged in!</h1>
-    <h2>This is all what we serve</h2>
+    <h1>Chat with the user!</h1>
     <div>
-        <a href="/logout">LOGOUT</a>
-        <a href="/mycart">View Cart</a>
-        <a href="/chat">Wanna Chat!</a>
+        <input id ="message"  placeholder="message">
+        <button id="button">SEND</button>
     </div>
-    <div id="main_box">
-
+    <div id="mes_box">
+       
     </div>
 </body>
 </html>
